# events

./: .env  .gitignore  db.py  llm.py  main.py  models.py  processor.py  pyproject.toml  rawTable.sql  requirements.txt
routers/: auth.py
