[project]
name = "slack-bot-v01"
version = "0.1.0"
description = ""
authors = [
    {name = "xxc52",email = "xxc52@naver.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.132.0,<0.133.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
